findbugs tweaks